add style to  welcome.html

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,12 @@ input:focus{
 .btn:nth-child(1){
     border: 1px solid var(--warning-color);
 }
+.logOut .navbar .container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 #incorrect, #exist{
     color: red;
